--- a/package.json
+++ b/package.json
@@ -15,9 +15,20 @@
     "@types/react-dom": "18.0.9",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
-    "next": "13.0.7",
+    "next": "13.0.8-canary.0",
+    "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-syntax-highlighter": "^15.5.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/marked": "^4.0.8",
+    "autoprefixer": "^10.4.13",
+    "framer-motion": "^7.10.2",
+    "jsx-to-string": "^1.4.0",
+    "marked": "^4.2.4",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
