--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "hasty",
   "version": "0.1.0",
-  "private": true,
+  "readme": "README.md",
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rafaelrcamargo/hasty"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@next/font": "13.0.7",
@@ -19,16 +25,22 @@
     "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-syntax-highlighter": "^15.5.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
     "@types/marked": "^4.0.8",
+    "@types/react-syntax-highlighter": "^15.5.5",
     "autoprefixer": "^10.4.13",
     "framer-motion": "^7.10.2",
     "jsx-to-string": "^1.4.0",
     "marked": "^4.2.4",
     "postcss": "^8.4.20",
+    "prettier": "^2.8.1",
+    "react-markdown": "^8.0.4",
+    "react-syntax-highlighter": "^15.5.0",
+    "rehype-katex": "^6.0.2",
+    "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
     "tailwindcss": "^3.2.4"
   }
 }
